package com.flightbuddy.flightbuddy;

public enum FlightStatus {
    AVAILABLE,
    CANCELLED
}
